[gd_scene load_steps=6 format=3 uid="uid://bxkkb68a0jcpv"]

[ext_resource type="Script" path="res://scripts/character/Character.gd" id="1_e5d1n"]
[ext_resource type="Script" path="res://scripts/character/StatManager.gd" id="2_23t8j"]
[ext_resource type="Script" path="res://scripts/character/StanceManager.gd" id="2_qtv2c"]
[ext_resource type="PackedScene" uid="uid://bvss1xy7kd54" path="res://scripts/character/stance.tscn" id="4_7ivic"]
[ext_resource type="Script" path="res://scripts/character/Action.gd" id="5_3h5q0"]

[node name="Character" type="CharacterBody2D"]
script = ExtResource("1_e5d1n")

[node name="SpriteManager" type="Node2D" parent="."]

[node name="StatManager" type="Node2D" parent="."]
script = ExtResource("2_23t8j")

[node name="StanceManager" type="Node2D" parent="."]
script = ExtResource("2_qtv2c")

[node name="Stance" parent="StanceManager" instance=ExtResource("4_7ivic")]

[node name="Action" type="Node" parent="StanceManager/Stance/Actions" index="0"]
script = ExtResource("5_3h5q0")

[node name="Hitbox" type="Area2D" parent="."]

[editable path="StanceManager/Stance"]
